--- a/signal.html
+++ b/signal.html
@@ -12,6 +12,7 @@
   --text:#ffffff;
   --accent:#5ac8fa;
   --green:#4caf50;
+  --red:#f44336;
 }
 *{box-sizing:border-box;}
 body{
@@ -23,36 +24,32 @@ body{
 .wrap{max-width:1100px;margin:20px auto;padding:20px;}
 header{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;}
 header h1{margin:0;font-size:22px;display:flex;align-items:center;gap:10px;font-weight:700;}
-.card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(0,0,0,0.05));border:1px solid rgba(255,255,255,0.06);border-radius:14px;padding:16px;margin-bottom:16px;}
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;}
+.license-section, .market-section, #adminPanel{
+  background:var(--panel);
+  border:1px solid rgba(255,255,255,0.1);
+  border-radius:14px;
+  padding:16px;
+  margin-bottom:16px;
+}
 label{font-size:13px;color:var(--muted);display:block;margin-bottom:6px;}
-select,button,input,textarea{width:100%;padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,0.07);font-weight:600;}
-select,input,textarea{background:rgba(255,255,255,0.95);color:#000;font-weight:500;}
-.controls{display:flex;gap:10px;margin-top:14px;}
-.controls button{flex:1;background:var(--accent);color:#000;border:none;border-radius:10px;cursor:pointer;font-weight:700;transition:0.18s;}
-.controls button:hover{opacity:0.95;}
+input, select, button{width:100%;padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,0.1);font-weight:500;}
+input, select{background:#fff;color:#000;}
+button{background:var(--accent);color:#000;font-weight:700;cursor:pointer;transition:0.18s;border:none;}
+button:hover{opacity:0.9;}
 .license-status{margin-top:6px;font-weight:600;font-size:14px;}
-footer{text-align:center;color:#9fb0d6;font-size:13px;margin-top:20px;}
-.signal-modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;align-items:center;justify-content:center;z-index:1200;}
-.signal-modal{background:linear-gradient(180deg,#121a38,#161f45);padding:16px;border-radius:14px;width:92%;max-width:380px;color:#fff;box-shadow:0 12px 30px rgba(0,0,0,0.6);text-align:left;font-family:'Courier New',monospace;font-size:13px;line-height:1.45;border:1px solid rgba(255,255,255,0.05);}
-.signal-text{white-space:pre-wrap;font-family:'Courier New',monospace;font-size:13px;line-height:1.45;color:#eee;background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.05);border-radius:8px;padding:10px;margin-bottom:8px;}
-.signal-modal button{width:100%;padding:9px;border:none;border-radius:8px;background:var(--accent);font-weight:700;cursor:pointer;margin-top:6px;}
-.analysis-overlay{position:fixed;inset:0;background:rgba(0,0,0,0.85);display:none;align-items:center;justify-content:center;z-index:1400;flex-direction:column;color:#fff;font-family:Arial,sans-serif;text-align:center;}
-.analysis-overlay .text{font-size:18px;font-weight:700;margin-bottom:12px;}
-.analysis-overlay .spinner{width:50px;height:50px;border:6px solid #eee;border-top-color:#5ac8fa;border-radius:50%;animation:spin 1s linear infinite;margin:auto;}
-@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
-.admin-login-backdrop{position:fixed;inset:0;background:rgba(0,0,0,0.55);display:none;align-items:center;justify-content:center;z-index:1300;}
-.admin-login{background:#0e1628;padding:16px;border-radius:12px;width:90%;max-width:380px;color:#fff;box-shadow:0 12px 40px rgba(0,0,0,0.6);}
-.admin-login h3{margin:0 0 10px 0;}
-.admin-login input{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);margin-bottom:8px;}
-.admin-login .row{display:flex;gap:8px;}
-.admin-login .row button{flex:1;padding:10px;border-radius:8px;border:none;cursor:pointer;}
-#adminPanel{display:none;margin-top:10px;}
-.code-box{word-break:break-all;padding:8px;background:rgba(0,0,0,0.2);border-radius:6px;margin-top:8px;font-family:monospace;font-size:13px;}
+.device-id{font-size:13px;color:var(--muted);margin-top:4px;}
+.asset-checkbox{max-height:200px;overflow-y:auto;border:1px solid rgba(255,255,255,0.1);border-radius:8px;padding:8px;background:rgba(255,255,255,0.05);}
 .asset-checkbox label{cursor:pointer;display:block;margin-bottom:4px;}
-.asset-checkbox input{margin-right:6px;}
-#loginPopup{position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;align-items:center;justify-content:center;z-index:1500;}
-#loginPopup .popup-content{background:#121a38;padding:16px;border-radius:12px;color:#fff;text-align:center;width:90%;max-width:360px;}
+.controls{display:flex;gap:10px;margin-top:12px;}
+.controls button{flex:1;}
+#adminPanel{display:none;}
+.code-box{word-break:break-all;padding:10px;background:rgba(0,0,0,0.2);border-radius:8px;margin-top:10px;font-family:monospace;font-size:13px;}
+footer{text-align:center;color:#9fb0d6;font-size:13px;margin-top:20px;}
+#loginPopup, .signal-modal-backdrop, .analysis-overlay, .admin-login-backdrop{position:fixed;inset:0;display:none;align-items:center;justify-content:center;z-index:1500;}
+.popup-content, .signal-modal, .admin-login{background:var(--panel);padding:16px;border-radius:14px;color:#fff;width:90%;max-width:380px;box-shadow:0 12px 30px rgba(0,0,0,0.6);}
+.signal-text{white-space:pre-wrap;font-family:'Courier New',monospace;font-size:13px;line-height:1.45;color:#eee;background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.05);border-radius:8px;padding:10px;margin-bottom:8px;}
+.analysis-overlay .spinner{width:50px;height:50px;border:6px solid #eee;border-top-color:var(--accent);border-radius:50%;animation:spin 1s linear infinite;margin:auto;}
+@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 @media (max-width:880px){.grid{grid-template-columns:1fr;}}
 </style>
 </head>
@@ -62,17 +59,20 @@ footer{text-align:center;color:#9fb0d6;font-size:13px;margin-top:20px;}
 <h1>🚀 Finorix-Matrix — AI Real Time Signal</h1>
 <div>
 <span class="license-status" id="licenseStatus">License Inactive ❌</span>
-<div class="small-note" id="deviceIdDiv"></div>
+<div class="device-id" id="deviceIdDiv"></div>
 </div>
 </header>
 
-<section class="card">
+<!-- License Section -->
+<section class="license-section">
+<h3>💳 License Activation</h3>
 <label>Enter License Key (Member)</label>
 <input type="text" id="licenseInput" placeholder="Paste license key here">
 <button id="activateBtn" style="margin-top:10px;">Activate License</button>
 </section>
 
-<section class="card">
+<!-- Market & Assets Section -->
+<section class="market-section">
 <div class="grid">
   <div>
     <label>Market</label>
@@ -92,12 +92,12 @@ footer{text-align:center;color:#9fb0d6;font-size:13px;margin-top:20px;}
   </div>
   <div>
     <label>Assets (Tap to select multiple)</label>
-    <div id="assetContainer" class="asset-checkbox" style="max-height:200px;overflow-y:auto;border:1px solid rgba(255,255,255,0.1);border-radius:8px;padding:8px;background:rgba(255,255,255,0.05);"></div>
+    <div id="assetContainer" class="asset-checkbox"></div>
   </div>
 
   <div>
     <label>Number of Signals</label>
-    <input type="number" id="numSignals" value="1" min="1" placeholder="Enter number of signals">
+    <input type="number" id="numSignals" value="1" min="1">
   </div>
 
   <div>
@@ -110,57 +110,29 @@ footer{text-align:center;color:#9fb0d6;font-size:13px;margin-top:20px;}
     </select>
   </div>
 </div>
-<div class="controls" style="margin-top:12px;">
+<div class="controls">
 <button id="generate">Generate Signal</button>
 <button id="reset">Reset</button>
 </div>
 </section>
 
-<section class="card" id="adminPanel">
+<!-- Admin Panel -->
+<section id="adminPanel">
 <h3>🔧 Admin — License Generator</h3>
-<div style="margin-bottom:8px;"><label>Device ID to give license</label><input type="text" id="adminDeviceId" placeholder="Enter device ID"></div>
-<div style="margin-bottom:8px;"><label>License Duration (days)</label><input type="number" id="adminDuration" placeholder="e.g. 15" min="1"></div>
-<div style="display:flex;gap:8px;">
-<button id="generateLicenseBtn" style="flex:1;background:#4caf50;color:#fff;">Generate License</button>
-<button id="copyLastLicenseBtn" style="flex:1;background:#2196f3;color:#fff;">Copy Last</button>
+<div>
+<label>Device ID to give license</label>
+<input type="text" id="adminDeviceId" placeholder="Enter device ID">
 </div>
-<div class="code-box" id="generatedBox" style="margin-top:10px;">Generated license will appear here.</div>
+<div style="margin-top:8px;">
+<label>License Duration (days)</label>
+<input type="number" id="adminDuration" placeholder="e.g. 15" min="1">
+</div>
+<div class="controls" style="margin-top:10px;">
+<button id="generateLicenseBtn" style="background:var(--green);color:#fff;">Generate License</button>
+<button id="copyLastLicenseBtn" style="background:var(--accent);color:#000;">Copy Last</button>
+</div>
+<div class="code-box" id="generatedBox">Generated license will appear here.</div>
 </section>
-
-<!-- Signal Modal -->
-<div class="signal-modal-backdrop" id="signalModal">
-<div class="signal-modal">
-<div id="signalText" class="signal-text"></div>
-<button id="copySignalBtn">📋 Copy Signal</button>
-<button onclick="closeSignal()">Close</button>
-</div>
-</div>
-
-<!-- Analysis Overlay -->
-<div class="analysis-overlay" id="analysisOverlay">
-<div class="text">🔍 AI Market Analysis... Please wait 10s</div>
-<div class="spinner"></div>
-</div>
-
-<!-- Smart Login Popup -->
-<div id="loginPopup">
-  <div class="popup-content">
-    <div>🎯 Finorix-Matrix AI 90% Accurate Signal Generate করার উপায়!<br>👉 ভিডিও দেখুন এখনই: <a href="https://t.me/TraderParvej_Community/2259" target="_blank" style="color:#5ac8fa;">Watch Now</a></div>
-    <button onclick="closeLoginPopup()" style="margin-top:10px;background:#5ac8fa;color:#000;border:none;padding:8px;border-radius:6px;cursor:pointer;">Close</button>
-  </div>
-</div>
-
-<!-- Admin Login Modal -->
-<div class="admin-login-backdrop" id="adminLoginModal">
-<div class="admin-login">
-<h3>Admin Login</h3>
-<input type="password" id="adminPasswordInput" placeholder="Enter admin password">
-<div class="row" style="margin-top:6px;">
-<button id="adminLoginSubmit" style="background:#4caf50;color:#fff;">Login</button>
-<button id="adminLoginCancel" style="background:#f44336;color:#fff;">Cancel</button>
-</div>
-</div>
-</div>
 
 <footer>
 © Finorix-Matrix — Advance signals
@@ -169,8 +141,114 @@ footer{text-align:center;color:#9fb0d6;font-size:13px;margin-top:20px;}
 </div>
 </footer>
 
+<!-- JS Logic -->
 <script>
-// All previous JS remains unchanged; no functionality altered
+const ADMIN_PASSWORD="@Traderparvej@";
+const LICENSE_STORAGE_PREFIX="finorix_license_";
+let deviceId=localStorage.getItem("finorix_device_id");
+if(!deviceId){deviceId=String(Math.floor(Math.random()*900000000+100000000));localStorage.setItem("finorix_device_id",deviceId);}
+document.getElementById('deviceIdDiv').textContent="Device ID: "+deviceId;
+
+// Elements
+const licenseInput=document.getElementById('licenseInput');
+const activateBtn=document.getElementById('activateBtn');
+const licenseStatus=document.getElementById('licenseStatus');
+const adminPanel=document.getElementById('adminPanel');
+const adminDeviceIdInput=document.getElementById('adminDeviceId');
+const adminDurationInput=document.getElementById('adminDuration');
+const generateLicenseBtn=document.getElementById('generateLicenseBtn');
+const generatedBox=document.getElementById('generatedBox');
+const copyLastLicenseBtn=document.getElementById('copyLastLicenseBtn');
+const marketSel=document.getElementById('market');
+const assetContainer=document.getElementById('assetContainer');
+const timeframe=document.getElementById('timeframe');
+const generateBtn=document.getElementById('generate');
+const resetBtn=document.getElementById('reset');
+const signalModal=document.createElement('div'); // Placeholder
+const signalText=document.createElement('div'); // Placeholder
+const signalModeSel=document.getElementById('signalMode');
+
+let licenseActive=false;
+let lastGenerated=null;
+
+const OTCpairs=[ "USD/ARS (OTC)","USD/BDT (OTC)","USD/EGP (OTC)"];
+const REALpairs=['EUR/JPY','USD/JPY','EUR/USD'];
+
+function fillAssetContainer(){
+  assetContainer.innerHTML='';
+  const pairs=marketSel.value==='REAL'?REALpairs:OTCpairs;
+  pairs.forEach(p=>{
+    const label=document.createElement('label');
+    const checkbox=document.createElement('input');
+    checkbox.type='checkbox';
+    checkbox.value=p;
+    label.appendChild(checkbox);
+    label.appendChild(document.createTextNode(p));
+    assetContainer.appendChild(label);
+  });
+}
+fillAssetContainer();
+marketSel.addEventListener('change',fillAssetContainer);
+
+function makeLicenseKeyForDevice(dev,days){
+  const now=Date.now();
+  const expiry=now+days*24*60*60*1000;
+  const rand=Math.floor(Math.random()*900000+100000);
+  const payload=`${dev}|${expiry}|${rand}`;
+  return btoa(payload);
+}
+
+function validateLicenseKeyForThisDevice(key,dev){
+  try{
+    const decoded=atob(key);
+    const [dId,expiryStr]=decoded.split("|");
+    const expiry=parseInt(expiryStr,10);
+    return String(dId)===String(dev) && Date.now()<=expiry;
+  }catch(e){return false;}
+}
+
+function saveLicenseToLocal(key){localStorage.setItem(LICENSE_STORAGE_PREFIX+deviceId,key);}
+function loadLicenseLocal(){
+  const key=localStorage.getItem(LICENSE_STORAGE_PREFIX+deviceId);
+  if(!key) return false;
+  if(validateLicenseKeyForThisDevice(key,deviceId)){
+    licenseStatus.textContent="License Active ✅";
+    licenseActive=true;
+    return true;
+  }
+  return false;
+}
+loadLicenseLocal();
+
+activateBtn.addEventListener('click',()=>{
+  const entered=licenseInput.value.trim();
+  if(!entered){alert("Paste license key.");return;}
+  if(validateLicenseKeyForThisDevice(entered,deviceId)){
+    saveLicenseToLocal(entered);
+    licenseStatus.textContent="License Active ✅";
+    licenseActive=true;
+    alert("✅ License activated successfully!");
+  }else alert("❌ Invalid or expired license.");
+});
+
+generateLicenseBtn.addEventListener('click',()=>{
+  const dev=adminDeviceIdInput.value.trim();
+  const days=parseInt(adminDurationInput.value,10);
+  if(!dev||!days){alert("Enter device ID and duration.");return;}
+  const key=makeLicenseKeyForDevice(dev,days);
+  lastGenerated=key;
+  generatedBox.textContent=key;
+});
+copyLastLicenseBtn.addEventListener('click',()=>{if(lastGenerated)navigator.clipboard.writeText(lastGenerated);});
+
+document.getElementById('showAdminLoginBtn').addEventListener('click',()=>{
+  const pass=prompt("Enter Admin Password:");
+  if(pass===ADMIN_PASSWORD){
+    adminPanel.style.display='block';
+  }else alert("Wrong password.");
+});
+
+resetBtn.addEventListener('click',()=>{assetContainer.querySelectorAll('input').forEach(c=>c.checked=false);});
 </script>
 </body>
 </html>
